--- a/app/src/main/res/layout/activity_rental_list_filter_type.xml
+++ b/app/src/main/res/layout/activity_rental_list_filter_type.xml
@@ -12,21 +12,21 @@
         android:layout_height="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:background="@color/base_background_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/abc_vector_test" />
+        app:srcCompat="@drawable/filled_red" />
 
     <Button
         android:id="@+id/btntypeClear"
         android:layout_width="65dp"
         android:layout_height="32dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="32dp"
-        android:text="초기화"
-        android:textSize="14sp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bg_custom_button3"
         android:textColor="@color/agent_color_red"
-        android:lineHeight="17sp"
-        android:gravity="end"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:text="초기화"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,117 +36,138 @@
         android:layout_height="20dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="72dp"
+        android:fontFamily="@font/nanumsquarebold"
         android:text="외형 선택"
-        android:textColor="@color/agent_color_1"
+        android:textColor="@color/agent_color_1NoOpp"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
         android:layout_marginTop="123dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="경차"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="201dp"
         android:layout_marginTop="124dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="세단"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
         android:layout_marginTop="24dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="스포츠"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb0"
         tools:ignore="MissingConstraints" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="201dp"
         android:layout_marginTop="24dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="R/V"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb1"
         tools:ignore="MissingConstraints" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
         android:layout_marginTop="24dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="SUV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb2"
         tools:ignore="MissingConstraints" />
 
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="201dp"
         android:layout_marginTop="24dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="승합"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb3"
         tools:ignore="MissingConstraints" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
         android:layout_marginTop="24dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="밴"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb4"
         tools:ignore="MissingConstraints" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="201dp"
         android:layout_marginTop="24dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="컨버터블"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb5"
         tools:ignore="MissingConstraints" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
         android:layout_marginTop="24dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="쿠페"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb6"
         tools:ignore="MissingConstraints" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/rb9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="201dp"
         android:layout_marginTop="24dp"
+        android:button="@drawable/checkbox_selector"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="트럭"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb7"
@@ -157,7 +178,10 @@
         android:layout_width="304dp"
         android:layout_height="74dp"
         android:layout_marginBottom="20dp"
+        android:background="@drawable/bg_custom_button2"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="적용"
+        android:textColor="@color/base_background_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.448"
