--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -47,6 +47,7 @@
     <color name="agent_color_1">#803e3e3e</color> //50% opacity
     <color name="agent_color_1NoOpp">#ff3e3e3e</color> //100% opacity
     <color name="agent_color_1Opp">#993e3e3e</color> //60% opacity
+    <color name="agent_color_1_80Opp">#CC3e3e3e</color> //80% opacity
     <color name="agent_color_red">#ff4d4d</color>
 
 </resources>
