--- a/app/src/main/res/layout/rental_list_detail.xml
+++ b/app/src/main/res/layout/rental_list_detail.xml
@@ -82,12 +82,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_gravity="center|center_horizontal|center_vertical"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:visibility="visible">
 
                             <ImageView
                                 android:id="@+id/rental_car_image"
                                 android:layout_width="match_parent"
                                 android:layout_height="204dp"
+                                android:scaleType="fitXY"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:srcCompat="@null" />
@@ -130,7 +132,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="24dp"
                         android:orientation="vertical"
-                        tools:ignore="MissingConstraints">
+                        tools:ignore="MissingConstraints"
+                        android:visibility="visible">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -524,7 +527,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="24dp"
                         android:orientation="vertical"
-                        tools:ignore="MissingConstraints">
+                        tools:ignore="MissingConstraints"
+                        android:visibility="visible">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -681,15 +685,33 @@
                     </LinearLayout>
 
                     <!-- 지도 -->
-                    <LinearLayout
-                        android:id="@+id/rMap"
+                    <FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="188dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:orientation="vertical">
-                    </LinearLayout>
+                        android:layout_marginTop="28dp">
+                        <RelativeLayout
+                            android:id="@+id/rMap"
+                            android:layout_width="match_parent"
+                            android:layout_height="188dp"
+                            android:gravity="center|center_horizontal|center_vertical"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+                        </RelativeLayout>
+
+                        <!-- 현재 주소 layout -->
+                        <ImageView
+                            android:id="@+id/ivPin"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="12dp"
+                            android:layout_gravity="center|center_vertical|center_horizontal"
+                            app:layout_constraintBottom_toBottomOf="@+id/kMap"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:src="@drawable/current_icon" />
+                    </FrameLayout>
 
                     <!-- 딜리버리 여부 -->
                     <LinearLayout
@@ -825,7 +847,7 @@
                                 android:layout_height="48dp"
                                 android:layout_marginStart="24dp"
                                 android:layout_marginEnd="24dp"
-                                android:background="@drawable/layout_background_3"/>
+                                android:background="@drawable/layout_background_3" />
 
                         </LinearLayout>
                     </LinearLayout>
@@ -865,6 +887,7 @@
                                 android:layout_marginTop="20dp"
                                 android:orientation="horizontal">
                                 <TextView
+                                    android:id="@+id/rental_allocate_text"
                                     android:fontFamily="@font/nanumsquareregular"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -931,6 +954,7 @@
                                 android:layout_marginTop="20dp"
                                 android:orientation="horizontal">
                                 <TextView
+                                    android:id="@+id/rental_return_text"
                                     android:fontFamily="@font/nanumsquareregular"
                                     android:layout_width="245dp"
                                     android:layout_height="wrap_content"
@@ -1016,10 +1040,10 @@
                                     android:letterSpacing="0.05"/>
 
                                 <ImageView
-                                    android:layout_width="24dp"
-                                    android:layout_height="24dp"
+                                    android:layout_width="18dp"
+                                    android:layout_height="18dp"
                                     android:layout_marginLeft="20dp"
-                                    android:contentDescription="@string/actionbar_prev_icon_description"
+                                    android:layout_gravity="center_horizontal|center_vertical"
                                     android:src="@drawable/info" />
 
                                 <TextView
